--- a/index.html
+++ b/index.html
@@ -16,87 +16,174 @@
     <div class="panel panel-left">
 
       <div class="panel-left__header">
-        <span class="app-title">Salary Converter</span>
-        <span class="app-subtitle">Professional salary calculator</span>
+        <div class="app-brand">
+          <!-- Logomark SVG inline at 32×32 -->
+          <svg class="app-logo" width="32" height="32" viewBox="0 0 54 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g filter="url(#filter0_ddiii_7531_73252)">
+              <g clip-path="url(#clip0_7531_73252)">
+                <rect x="3" width="48" height="48" rx="12" fill="#0A0D12"/>
+                <rect width="48" height="48" transform="translate(3)" fill="url(#paint0_linear_7531_73252)"/>
+                <g filter="url(#filter1_d_7531_73252)">
+                  <path d="M11.9609 24.0002C11.9609 20.7547 12.9888 17.7494 14.7367 15.2918H22.2526V16.7001C19.8695 18.254 18.2943 20.9431 18.2943 24.0002C18.2943 28.8096 22.1931 32.7085 27.0026 32.7085V39.0418C18.6953 39.0418 11.9609 32.3074 11.9609 24.0002Z" fill="url(#paint1_linear_7531_73252)"/>
+                  <path d="M39.2685 32.7085C41.0164 30.251 42.0443 27.2456 42.0443 24.0002C42.0443 15.6929 35.3099 8.9585 27.0026 8.9585V15.2918C31.8121 15.2918 35.7109 19.1907 35.7109 24.0002C35.7109 27.0572 34.1357 29.7464 31.7526 31.3002V32.7085H39.2685Z" fill="url(#paint2_linear_7531_73252)"/>
+                </g>
+              </g>
+              <rect x="4" y="1" width="46" height="46" rx="11" stroke="url(#paint3_linear_7531_73252)" stroke-width="2"/>
+            </g>
+            <defs>
+              <filter id="filter0_ddiii_7531_73252" x="0" y="-3" width="54" height="57" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset dy="1"/><feGaussianBlur stdDeviation="0.5"/>
+                <feComposite in2="hardAlpha" operator="out"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.162923 0 0 0 0 0.162923 0 0 0 0 0.162923 0 0 0 0.08 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_7531_73252"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feMorphology radius="1" operator="erode" in="SourceAlpha" result="effect2_dropShadow_7531_73252"/>
+                <feOffset dy="3"/><feGaussianBlur stdDeviation="2"/>
+                <feComposite in2="hardAlpha" operator="out"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.164706 0 0 0 0 0.164706 0 0 0 0 0.164706 0 0 0 0.14 0"/>
+                <feBlend mode="normal" in2="effect1_dropShadow_7531_73252" result="effect2_dropShadow_7531_73252"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect2_dropShadow_7531_73252" result="shape"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset dy="-3"/><feGaussianBlur stdDeviation="1.5"/>
+                <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0"/>
+                <feBlend mode="normal" in2="shape" result="effect3_innerShadow_7531_73252"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feOffset dy="3"/><feGaussianBlur stdDeviation="1.5"/>
+                <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.1 0"/>
+                <feBlend mode="normal" in2="effect3_innerShadow_7531_73252" result="effect4_innerShadow_7531_73252"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feMorphology radius="1" operator="erode" in="SourceAlpha" result="effect5_innerShadow_7531_73252"/>
+                <feOffset/>
+                <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"/>
+                <feBlend mode="normal" in2="effect4_innerShadow_7531_73252" result="effect5_innerShadow_7531_73252"/>
+              </filter>
+              <filter id="filter1_d_7531_73252" x="8.79427" y="4.20833" width="36.4166" height="44.3333" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                <feMorphology radius="1.58333" operator="erode" in="SourceAlpha" result="effect1_dropShadow_7531_73252"/>
+                <feOffset dy="2.375"/><feGaussianBlur stdDeviation="2.375"/>
+                <feComposite in2="hardAlpha" operator="out"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0.141176 0 0 0 0 0.141176 0 0 0 0 0.141176 0 0 0 0.1 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_7531_73252"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_7531_73252" result="shape"/>
+              </filter>
+              <linearGradient id="paint0_linear_7531_73252" x1="24" y1="5.96047e-07" x2="26" y2="48" gradientUnits="userSpaceOnUse">
+                <stop stop-color="white" stop-opacity="0"/>
+                <stop offset="1" stop-color="white" stop-opacity="0.12"/>
+              </linearGradient>
+              <linearGradient id="paint1_linear_7531_73252" x1="27.0026" y1="8.9585" x2="27.0026" y2="39.0418" gradientUnits="userSpaceOnUse">
+                <stop stop-color="white" stop-opacity="0.8"/>
+                <stop offset="1" stop-color="white" stop-opacity="0.5"/>
+              </linearGradient>
+              <linearGradient id="paint2_linear_7531_73252" x1="27.0026" y1="8.9585" x2="27.0026" y2="39.0418" gradientUnits="userSpaceOnUse">
+                <stop stop-color="white" stop-opacity="0.8"/>
+                <stop offset="1" stop-color="white" stop-opacity="0.5"/>
+              </linearGradient>
+              <linearGradient id="paint3_linear_7531_73252" x1="27" y1="0" x2="27" y2="48" gradientUnits="userSpaceOnUse">
+                <stop stop-color="white" stop-opacity="0.12"/>
+                <stop offset="1" stop-color="white" stop-opacity="0"/>
+              </linearGradient>
+              <clipPath id="clip0_7531_73252">
+                <rect x="3" width="48" height="48" rx="12" fill="white"/>
+              </clipPath>
+            </defs>
+          </svg>
+          <div class="app-brand__text">
+            <span class="app-title">Salary Converter</span>
+            <span class="app-subtitle">Professional salary calculator</span>
+          </div>
+        </div>
       </div>
 
-    <div class="benchmark-section" id="benchmark-section">
+      <div class="benchmark-section" id="benchmark-section">
 
-      <button class="benchmark-toggle" id="benchmark-toggle" type="button"
-              aria-expanded="false" aria-controls="benchmark-body">
-        <svg class="benchmark-toggle__icon" xmlns="http://www.w3.org/2000/svg"
-             width="14" height="14" viewBox="0 0 24 24" fill="none"
-             stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
-             stroke-linejoin="round" aria-hidden="true">
-          <polyline points="9 18 15 12 9 6"></polyline>
-        </svg>
-        <span class="benchmark-toggle__label">Get a salary estimate</span>
-      </button>
-
-      <div class="benchmark-body" id="benchmark-body">
-
-        <div class="input-group">
-          <label for="benchmark-country">Country</label>
-          <select id="benchmark-country">
-            <option value="">— Select country —</option>
-            <option value="United States">United States</option>
-            <option value="United Kingdom">United Kingdom</option>
-            <option value="Canada">Canada</option>
-            <option value="Australia">Australia</option>
-            <option value="Germany">Germany</option>
-            <option value="France">France</option>
-            <option value="Netherlands">Netherlands</option>
-            <option value="Sweden">Sweden</option>
-            <option value="India">India</option>
-            <option value="Singapore">Singapore</option>
-            <option value="UAE">UAE</option>
-            <option value="Brazil">Brazil</option>
-            <option value="Nigeria">Nigeria</option>
-            <option value="South Africa">South Africa</option>
-            <option value="Japan">Japan</option>
-          </select>
-        </div>
-
-        <div class="input-group">
-          <label for="benchmark-role">Tech Role</label>
-          <select id="benchmark-role">
-            <option value="">— Select role —</option>
-            <option value="Software Engineer">Software Engineer</option>
-            <option value="Frontend Engineer">Frontend Engineer</option>
-            <option value="Backend Engineer">Backend Engineer</option>
-            <option value="Full Stack Engineer">Full Stack Engineer</option>
-            <option value="Data Scientist">Data Scientist</option>
-            <option value="Data Engineer">Data Engineer</option>
-            <option value="Product Manager">Product Manager</option>
-            <option value="UX Designer">UX Designer</option>
-            <option value="DevOps / SRE">DevOps / SRE</option>
-            <option value="Engineering Manager">Engineering Manager</option>
-            <option value="QA Engineer">QA Engineer</option>
-            <option value="Cybersecurity Engineer">Cybersecurity Engineer</option>
-            <option value="Customer Success Manager">Customer Success Manager</option>
-            <option value="Customer Experience Manager">Customer Experience Manager</option>
-            <option value="Customer Service Manager">Customer Service Manager</option>
-          </select>
-        </div>
-
-        <div class="input-group">
-          <label for="benchmark-level">Experience Level</label>
-          <select id="benchmark-level">
-            <option value="">— Select level —</option>
-            <option value="junior">Junior (0–2 yrs)</option>
-            <option value="mid">Mid-Level (3–5 yrs)</option>
-            <option value="senior">Senior (6–10 yrs)</option>
-            <option value="staff">Staff / Principal (10+ yrs)</option>
-          </select>
-        </div>
-
-        <button class="benchmark-apply" id="benchmark-apply" type="button" disabled>
-          Apply estimate
+        <button class="benchmark-toggle" id="benchmark-toggle" type="button"
+                aria-expanded="false" aria-controls="benchmark-body">
+          <svg class="benchmark-toggle__icon" xmlns="http://www.w3.org/2000/svg"
+               width="14" height="14" viewBox="0 0 24 24" fill="none"
+               stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
+               stroke-linejoin="round" aria-hidden="true">
+            <polyline points="9 18 15 12 9 6"></polyline>
+          </svg>
+          <span class="benchmark-toggle__label">Get a salary estimate</span>
         </button>
 
-      </div><!-- /.benchmark-body -->
+        <div class="benchmark-body" id="benchmark-body">
 
-    </div><!-- /.benchmark-section -->
+          <!-- Row 1: Country + Role side by side -->
+          <div class="benchmark-row">
+            <div class="input-group">
+              <label for="benchmark-country">Country</label>
+              <select id="benchmark-country">
+                <option value="">— Country —</option>
+                <option value="United States">United States</option>
+                <option value="United Kingdom">United Kingdom</option>
+                <option value="Canada">Canada</option>
+                <option value="Australia">Australia</option>
+                <option value="Germany">Germany</option>
+                <option value="France">France</option>
+                <option value="Netherlands">Netherlands</option>
+                <option value="Sweden">Sweden</option>
+                <option value="India">India</option>
+                <option value="Singapore">Singapore</option>
+                <option value="UAE">UAE</option>
+                <option value="Brazil">Brazil</option>
+                <option value="Nigeria">Nigeria</option>
+                <option value="South Africa">South Africa</option>
+                <option value="Japan">Japan</option>
+              </select>
+            </div>
+            <div class="input-group">
+              <label for="benchmark-role">Role</label>
+              <select id="benchmark-role">
+                <option value="">— Role —</option>
+                <option value="Software Engineer">Software Engineer</option>
+                <option value="Frontend Engineer">Frontend Engineer</option>
+                <option value="Backend Engineer">Backend Engineer</option>
+                <option value="Full Stack Engineer">Full Stack Engineer</option>
+                <option value="Data Scientist">Data Scientist</option>
+                <option value="Data Engineer">Data Engineer</option>
+                <option value="Product Manager">Product Manager</option>
+                <option value="UX Designer">UX Designer</option>
+                <option value="DevOps / SRE">DevOps / SRE</option>
+                <option value="Engineering Manager">Engineering Manager</option>
+                <option value="QA Engineer">QA Engineer</option>
+                <option value="Cybersecurity Engineer">Cybersecurity Engineer</option>
+                <option value="Customer Success Manager">Customer Success Manager</option>
+                <option value="Customer Experience Manager">Customer Experience Manager</option>
+                <option value="Customer Service Manager">Customer Service Manager</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Row 2: Level + Apply button side by side -->
+          <div class="benchmark-row benchmark-row--apply">
+            <div class="input-group">
+              <label for="benchmark-level">Experience Level</label>
+              <select id="benchmark-level">
+                <option value="">— Level —</option>
+                <option value="junior">Junior (0–2 yrs)</option>
+                <option value="mid">Mid-Level (3–5 yrs)</option>
+                <option value="senior">Senior (6–10 yrs)</option>
+                <option value="staff">Staff / Principal (10+ yrs)</option>
+              </select>
+            </div>
+            <div class="benchmark-apply-wrapper">
+              <label class="benchmark-apply-spacer" aria-hidden="true">&nbsp;</label>
+              <button class="benchmark-apply" id="benchmark-apply" type="button" disabled>
+                Apply
+              </button>
+            </div>
+          </div>
+
+        </div><!-- /.benchmark-body -->
+
+      </div><!-- /.benchmark-section -->
 
       <div class="panel-left__body">
 
@@ -122,15 +209,28 @@
         </div>
 
         <div class="input-group">
-          <label for="salary-amount">Salary Amount</label>
+          <label for="salary-display">Salary Amount</label>
+          <!-- Formatted display sits over a hidden real number input -->
           <div class="input-wrapper">
             <span class="currency-symbol">$</span>
+            <!-- Visible formatted text input (display only) -->
+            <input
+              type="text"
+              id="salary-display"
+              class="salary-display"
+              placeholder="0"
+              autocomplete="off"
+              inputmode="decimal"
+            />
+            <!-- Hidden real number input for computation -->
             <input
               type="number"
               id="salary-amount"
-              placeholder="0.00"
+              class="salary-hidden"
               min="0"
               step="0.01"
+              aria-hidden="true"
+              tabindex="-1"
             />
           </div>
           <div class="benchmark-badge" id="benchmark-badge">
@@ -195,7 +295,22 @@
         <span class="results-heading">All Rates</span>
       </div>
 
-      <div class="results-list">
+      <!-- Empty state — shown until user enters a value -->
+      <div class="results-empty" id="results-empty">
+        <div class="results-empty__icon" aria-hidden="true">
+          <svg width="40" height="40" viewBox="0 0 24 24" fill="none"
+               xmlns="http://www.w3.org/2000/svg" stroke="#D4D4D8"
+               stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+            <line x1="12" y1="1" x2="12" y2="23"/>
+            <path d="M17 5H9.5a3.5 3.5 0 1 0 0 7h5a3.5 3.5 0 1 1 0 7H6"/>
+          </svg>
+        </div>
+        <p class="results-empty__title">Enter a salary to see all rates</p>
+        <p class="results-empty__hint">Type any amount in the <strong>Salary Amount</strong> field on the left, then choose your conversion period using the <strong>From</strong> and <strong>To</strong> selectors.</p>
+        <p class="results-empty__hint">Need a starting point? Open <strong>Get a salary estimate</strong> above to pre-fill based on your role and country.</p>
+      </div>
+
+      <div class="results-list" id="results-list">
 
         <div class="result-row" id="row-annual">
           <div class="result-row__meta">
