--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <div class="input-group period-group">
             <label for="from-period">From</label>
             <select id="from-period">
-              <option value="annual">Annual / Yearly</option>
+              <option value="annual">Yearly</option>
               <option value="monthly">Monthly</option>
               <option value="weekly">Weekly</option>
               <option value="daily">Daily</option>
@@ -263,7 +263,7 @@
           <div class="input-group period-group">
             <label for="to-period">To</label>
             <select id="to-period">
-              <option value="annual">Annual / Yearly</option>
+              <option value="annual">Yearly</option>
               <option value="monthly">Monthly</option>
               <option value="weekly">Weekly</option>
               <option value="daily" selected>Daily</option>
